# c-spiffe

./: .clang-format  .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  BUILDING.md  BUILDING_8md.html  CI.MD  CI.md  CI_8md.html  CMakeLists.txt  CMakeLists_8txt.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  COPYING-CMAKE-SCRIPTS_8txt.html  EXAMPLE_8md.html  MINOR-INSTALLATION.md  MINOR-INSTALLATION_8md.html  MODULES.md  MODULES_8md.html  README.md  README_8md.html  annotated.html  authorizer_8c.html  authorizer_8c__incl.map  authorizer_8c__incl.md5  authorizer_8h.html  authorizer_8h__dep__incl.map  authorizer_8h__dep__incl.md5  authorizer_8h__incl.map  authorizer_8h__incl.md5  authorizer_8h_source.html  backoff_8c.html  backoff_8c__incl.map  backoff_8c__incl.md5  backoff_8h.html  backoff_8h__dep__incl.map  backoff_8h__dep__incl.md5  backoff_8h__incl.map  backoff_8h__incl.md5  (+1912 more)
bundle/: CMakeLists.txt  README.md  jwtbundle.h  spiffebundle.h  x509bundle.h
bundle/jwtbundle/: bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/jwtbundle/include/: bundle.h  set.h
bundle/jwtbundle/src/: bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/jwtbundle/test/: README
bundle/jwtbundle/tests/: CMakeLists.txt  README  check_bundle.c  check_set.c
bundle/spiffebundle/: bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/spiffebundle/include/: bundle.h  set.h
bundle/spiffebundle/src/: bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/spiffebundle/tests/: CMakeLists.txt  check_bundle.c  check_set.c
bundle/x509bundle/: .gitignore  bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/x509bundle/include/: bundle.h  set.h
bundle/x509bundle/src/: bundle.c  bundle.h  set.c  set.h  source.c  source.h
bundle/x509bundle/test/: README
bundle/x509bundle/tests/: CMakeLists.txt  README  check_bundle.c  check_set.c
docker/: README.md  (+3 more)
examples/: CMakeLists.txt  README.md
examples/spiffe-grpc/: helloworld.proto
examples/spiffe-grpc/client/: main.cc
examples/spiffe-grpc/resources/: ca.crt  ca.key  client.crt  client.csr  client.key  server.crt  server.csr  server.key
examples/spiffe-grpc/server/: main.cc
examples/spiffe-http/: README.md
examples/spiffe-http/client/: main.c
examples/spiffe-http/server/: main.c
examples/spiffe-jwt/: README.md
examples/spiffe-jwt-using-proxy/: README.md
examples/spiffe-jwt-using-proxy/proxy/: reverse_proxy.conf
examples/spiffe-jwt-using-proxy/server/: main.c
examples/spiffe-jwt/client/: main.c
examples/spiffe-jwt/server/: main.c
examples/spiffe-tls/: README.md
examples/spiffe-tls/client/: main.c
examples/spiffe-tls/server/: main.c
examples/spiffe-watcher/: README.md  main.c
federation/: CMakeLists.txt  README.md  endpoint.c  endpoint.h  endpoint_example.c  federation.h  server.c  server.h  server_example.c  watcher.c  watcher.h  watcher_example.c
federation/src/: endpoint.c  endpoint.h  endpoint_example.c  watcher.c  watcher.h  watcher_example.c
federation/tests/: CMakeLists.txt  check_endpoint.c  check_server.c  check_spiffebundle_source.c  check_watcher.c
federation/tests/resources/: ca.conf  ca.crt  ca.key  ca.srl  example.org.bundle.crt  example.org.bundle.jwks  example.org.conf  example.org.crt  example.org.csr  example.org.ext.conf  example.org.key  example.org.pubkey  https_server.go  https_spiffe_server.go  https_web_server.go  localhost.crt  localhost.key
internal/: CMakeLists.txt  README.md  jwtutil.h  pemutil.h
internal/cryptoutil/: keys.c
internal/cryptoutil/include/: keys.h
internal/cryptoutil/src/: keys.c  keys.h
internal/jwtutil/: util.c  util.h
internal/pemutil/: pem.c
internal/x509util/: certpool.c  certpool.h  util.c  util.h
logger/: CMakeLists.txt  README.md  logger.c  logger.h
logger/tests/: CMakeLists.txt  check_logger.c
spiffeid/: .gitignore  CMakeLists.txt  README.md  id.c  id.h  match.c  match.h  trustdomain.c  trustdomain.h
spiffeid/include/: id.h  match.h  trustdomain.h
spiffeid/src/: id.c  id.h  match.c  match.h  trustdomain.c  trustdomain.h
spiffeid/test/: README
spiffeid/tests/: CMakeLists.txt  README  check_id.c  check_match.c  check_trustdomain.c
spiffetls/: CMakeLists.txt  EXAMPLE.md  README.md  c_dial_example.c  c_listen_example.c  dial.c  dial.h  listen.c  listen.h  mode.c  mode.h  option.c  peerid.c  peerid.h
spiffetls/src/: EXAMPLE.md  c_dial_example.c  c_listen_example.c  dial.c  dial.h  listen.c  listen.h  mode.c  mode.h  option.c  option.h  peerid.c  peerid.h
spiffetls/tests/: CMakeLists.txt  check_dial.c  check_listen.c  check_mode.c  check_peerid.c
spiffetls/tlsconfig/: authorizer.c  authorizer.h  config.c  config.h  trace.c
svid/: CMakeLists.txt  README.md  jwtsvid.h  x509svid.h
svid/jwtsvid/: parse.c  parse.h  svid.c  svid.h
svid/x509svid/: source.c  source.h  svid.c  verify.c  verify.h
workload/: CMakeLists.txt  EXAMPLE.md  README.md  backoff.c  c_client_example.c  c_client_example_bundle.c  c_client_example_validate.c  client.cc  client.h  cpp_client_example.cc  grpc_conn_test.cc  jwtcallback.h  jwtsource.c  jwtsource.h  jwtsource_example.c  jwtwatcher.c  jwtwatcher.h  watch_jwt_bundles.c  watcher.c  watcher.h  workload.h  x509context.h  x509source.c  x509source.h
workload/src/: CMakeLists.txt  EXAMPLE.md  JWTWatcher.c  JWTWatcher.h  JWTcallback.h  backoff.c  backoff.h  c_client_example.c  c_client_example_bundle.c  c_client_example_validate.c  client.c  client.cc  client.h  cpp_client_example.cc  grpc_conn_test.cc  jwt_callback.h  jwt_watcher.c  jwt_watcher.h  jwtcallback.h  jwtsource.c  jwtsource.h  jwtsource_example.c  jwtwatcher.c  jwtwatcher.h  requestor.cc  requestor.cpp  requestor.h  watch_jwt_bundles.c  watcher.c  watcher.h  x509context.h  x509source.c  x509source.h
workload/tests/: CMakeLists.txt  check_bundlesource.c  check_client.cc  check_jwt_watcher.c  check_jwtsource.c  check_jwtsvid.c  check_jwtwatcher.c  check_parse.c  check_requestor.c  check_requestor.cc  check_requestor.cpp  check_svidsource.c  check_verify.c  check_watcher.c  check_x509source.c  client_mock.cc
(+415 files in other folders)
